# AudioIntel

./: .env.sample  .gitignore  README.md  mastercode.py  pickaboo_product_urls.json  pickaboo_products.json  pyproject.toml  requirements.txt  startech_product_urls.json  startech_products.json  techland_product_urls.json  techland_products.json
backend/: main.py
chroma_db/1d5da031-9b4d-479d-9b65-016f268359ad/: index_metadata.pickle
datagenerator/: daraz_structured_products.json  generator.py  pickaboo_enriched_products.json  pickaboo_structured_products.json  startech_enriched_products.json  startech_structured_products.json  techland_earbuds2.json  techland_earbuds2_enriched.json  techland_earbuds3.json  techland_earbuds3_enriched.json  techland_earphone_products_crosscheck.json  techland_earphone_products_crosscheck_enriched.json  techland_neckband_products.json
embeddding/: data_downloader.py  embedder.py  generateEmbedding.py  makeembedding.py  querycheck.py
frontend/: about.html  auth.js  chat.css  chat.html  chat.js  index.html  login.html  styles.css
get_products/: pickaboo_products.py  startech_products.py  techland_products.py
get_urls/: pickaboo.py  startech.py  techland.py
